--- a/package.json
+++ b/package.json
@@ -4,11 +4,13 @@
   "main": "server.js",
   "license": "MIT",
   "scripts": {
-    "start": "nodemon server"
+    "start": "node server",
+    "nodemon": "nodemon server"
   },
   "dependencies": {
     "bcrypt": "^5.1.0",
     "cors": "^2.8.5",
+    "cron-parser": "^4.7.1",
     "dotenv": "^16.0.3",
     "express": "^4.18.2",
     "md5": "^2.3.0",
